Fetch Users changes